# PLaNi

./: README.MD  models_performance.docx  pyproject.toml
application/: main.py  tools.py  tools_new.py
application/data/: stats_simplifiées_collab.csv
application/models/: lgbm_reg_30T.pkl  lgbm_reg_H.pkl
application/pages/: 1_🙋‍♂️_Présence.py  2_🧮_Recommandation.py  3_📞📧_Résultat.py
csv_data_builder/: cons_data.ipynb
models_builder/: gives.py  lgbm_reg_D_mail_invoicing.pkl  mail_contact_D_lgbm.ipynb  mail_invoicing_D_lgbm.ipynb  volume_lgbmC_H.ipynb
