
[tool.poetry]
name = "expose"
version = "0.0.0"
description = "Expose PlaNi ML streamlit app"
authors = ["Cloud rangers <ww-gdo-datalake@airliquide.com>"]


[tool.poetry-dynamic-versioning]
enable = true
bump = true

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
doit = "0.33.1"
pyyaml = "^6.0"
st-pages = "^0.3.1"
streamlit-option-menu = "^0.3.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
tqdm = "^4.64.1"
plotly = "^5.14.1"
scikit-learn = "^1.2.1"
xgboost = "1.6.2"
lime = "^0.2.0"
susi = "^1.2.2"
streamlit = "^1.21.0"
awswrangler = "^3.2.0"
altair = "4"

hyperopt = "^0.2.7"
pandas = "1.5.1"
lightgbm = "3.3.5"
numpy = "^1.24.2"
vacances-scolaires-france = "^0.10.0"
workalendar = "^17.0.0"
ipykernel = "^6.22.0"
nbformat = "^5.8.0"
pulp = "^2.7.0"
joblib = "^1.3.1"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
markupsafe = "2.0.1"
black = "^22.12.0"
isort = "^5.11.4"
poetry-dynamic-versioning = "0.21.3"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-print = "^5.0.0"
flake8-implicit-str-concat = "^0.3.0"


[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

